fixed table of contents showing lot&lof&toc and some spacing issues.  Thanks Akash!

--- a/#rootDissertation.tex
+++ b/#rootDissertation.tex
@@ -44,7 +44,7 @@
 \usepackage{titlesec}
 \usepackage{setspace}
 \usepackage{scrextend}
-\usepackage[nottoc]{tocbibind}
+\usepackage[nottoc,notlot,notlof]{tocbibind}
 
 % These packages are what I personally use which are recommended for others
 %\usepackage{amsmath} % Makes pretty equations
@@ -75,8 +75,6 @@
 %% Author's personal definitions go here
 \newcommand{\angstrom}{\textup{ \AA}} % siunitx doesn't support angstroms
 \newcommand{\degree}{$^{\circ}$} % I used this in my old tables, possibly can be replaced by siunitx options, but I'm too lazy to deal with that right now.
-
-
 
 
 %%% This is required formatting for OSU dissertations.  Do not touch.
